Fix comment overflow issue causing whole page to scroll sideways

--- a/webapp/issue/style.less
+++ b/webapp/issue/style.less
@@ -83,6 +83,7 @@
   width: 0;
   padding: 0;
   visibility: hidden;
+  overflow: hidden;
   transition: visibility 0s, opacity 0.2  s linear;
 }
 .fra-issue__issue-visible {
